--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>تسجيل الدخول</h1>
-    <form action="#" method="post">
+    <form>
         <label for="firstName">الاسم الأول:</label>
         <input type="text" id="firstName" name="firstName" required><br><br>
 
