--- a/systeme solaire.html
+++ b/systeme solaire.html
@@ -27,7 +27,7 @@
 
 
     </ul>
-    <form action="#" method="post">
+    <form >
     <label for="opinion">رأيك:</label>
         <textarea id="opinion" name="opinion" rows="4" cols="50" required></textarea><br><br>
 
