--- a/systeme solaire.html
+++ b/systeme solaire.html
@@ -29,7 +29,7 @@
     </ul>
     <form >
     <label for="opinion">رأيك:</label>
-        <textarea id="opinion" name="opinion" rows="4" cols="50" required></textarea><br><br>
+        <textarea  name="opinion" rows="4" cols="50" required></textarea><br><br>
 
         <label>التقييم:</label>
         <input type="radio" id="1" name="rating" value="1" required>
