--- a/أورانوس.html
+++ b/أورانوس.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>أورانوس</title>
+    <link rel="Stylesheet" href="style.css">
 </head>
 <body>
     <center><h1>أورانوس</h1></center>
