--- a/systeme solaire.html
+++ b/systeme solaire.html
@@ -7,12 +7,22 @@
     <title>النضام الشمسي</title>
 </head>
 <body>
+    <header>
     <center><h1>النضام الشمسي</h1></center>
     <h2>تعريف النضام الشمسي</h2>
     <P>هي النظام الكوكبي الذي يتكون من الشمس وجميع ما يَدور حولها من أجرام بما في ذلك الأرض والكواكب الأخرى</P>
     <center><img src="img.jpeg" width="520px"></center>
     <hr>
     <h1>مكونات النضام الشمسي: </h1>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+    </header>
 
     <div class="grid-container">
         <div class="grid-item"><p><a href="نبتون.html"> نبتون</a></p></div>
