--- a/systeme solaire.html
+++ b/systeme solaire.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Stylesheet" href="style.css">
+    <link rel="Stylesheet" href="style2.css">
     <title>النضام الشمسي</title>
 </head>
 <body>
